--- a/Monte-Karlo/Monte-Karlo/Monte-Karlo.csproj
+++ b/Monte-Karlo/Monte-Karlo/Monte-Karlo.csproj
@@ -12,7 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="icon2.ico" />
+    <None Remove="icon2.ico" />
   </ItemGroup>
 
   <ItemGroup>
